src/test/compile-fail/issue-3993.rs
use zoo::fly; //~ ERROR failed to resolve import

mod zoo {
    priv fn fly() {}
}


fn main() {}
